# vehicle_model

./: CMakeLists.txt  package.xml
include/vehicle_model/: semitrailer_model.hpp  vehicle_model.hpp
src/: semitrailer_model.cpp
